# grossberg-rag

./: .env.example  .gitignore  README.md  ab_test.py  agent.py  chat.py  cite.py  config.yaml  embedding.py  engine.py  image_gate.py  ingest.py  kb_tool.py  llm.py  measure_caption_divergence.py  models.py  pyproject.toml  pyrightconfig.json  query.py  rerank.py  router.py  server.py
.claude/: CLAUDE.md
.claude/skills/grossberg-ask/: SKILL.md
.claude/skills/grossberg-ask/scripts/: query_kb.py
docs/: agentic_design.md  ch4_figures_and_models.md  design_notes.md
grag/: __init__.py  agent.py  cli.py  embedding.py  engine.py  expand.py  hybrid_seed.py  image_gate.py  ingest.py  kb_tool.py  llm.py  models.py  paths.py  query.py  rerank.py  retrieval.py  router.py  server.py  tracing.py
grag/prompts/: answer_system.md
prompts/: answer_system.md
scripts/: ab_test.py  measure_caption_divergence.py  patch_image_citations.py
static/: index.html
tests/: conftest.py  test_agent.py  test_chat_helpers.py  test_cite.py  test_evil_edge_cases.py  test_expand.py  test_hybrid_seed.py  test_image_gate.py  test_integration.py  test_kb_tool.py  test_rerank.py  test_retrieval.py  test_router.py
