[project]
name = "grossberg-rag"
version = "0.1.0"
description = "RAG pipeline for Grossberg Ch4 — multimodal PDF processing with LightRAG"
requires-python = ">=3.12"

dependencies = [
    "raganything[all]",
    "mineru==2.1.5",
    "doclayout-yolo",
    "transformers==4.53.3",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []
