[project]
name = "grossberg-rag"
version = "0.1.0"
description = "RAG pipeline for Grossberg Ch4 — multimodal PDF processing with LightRAG"
requires-python = ">=3.12"

dependencies = [
    "raganything[all]",
    "mineru==2.1.5",
    "doclayout-yolo",
    "transformers==4.53.3",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "lightrag-hku==1.4.16",
    "python-mecab-ko>=1.3.7",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live API keys (deselected by default)",
]
